# voting

./: Cargo.toml
assets/: ballot.html  done.html  error.html  index.html
src/: admin.rs  ballot.rs  data.rs  main.rs  state.rs  static_page.rs
